Bug 91489 - CONDITIONAL FORMATTING: Crash on select Icon Set from dialog (not from menu)
Summary: CONDITIONAL FORMATTING: Crash on select Icon Set from dialog (not from menu)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.0.0.0.beta1
Hardware: Other All
: medium critical
Assignee: Philippe Jung
URL:
Whiteboard: target:5.1.0 target:5.0.0.0.beta2
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-22 17:27 UTC by pierre-yves samyn
Modified: 2016-10-25 19:17 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
WinDbg backtrace (16.06 KB, text/plain)
2015-05-22 17:27 UTC, pierre-yves samyn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pierre-yves samyn 2015-05-22 17:27:21 UTC
Created attachment 115842 [details]
WinDbg backtrace

Hi

Crash on select icon set from dialog (not from menu)

Platform: Windows 7/64 & Version: 5.0.0.0.beta1
Build ID: 0a16c3dda4150008d9be6f24cbd15ac198d116d3
Locale: fr-FR (fr_FR)

Steps to reproduce: File> New> Spreadsheet then
1. Enter some data, eg. 1 to 10 in the range A1:A10
2. Select A1:A10
3. Format> Conditional Formatting> Condition (dialog opens)
4. Condition 1: select "All cells", type listbox: select "Icon Set"

Crash (see windbg backtrace attached)

Regards
Pierre-Yves
Comment 1 Yan Pas 2015-05-23 12:16:16 UTC
Confirm
Select area of numbers in Calc and make this area data bar formatted.
Now select this area again and press icon formatting, press yes in menu and in dropdown list select again icon formatting - CRASH

Related 59251 59314
Comment 2 Philippe Jung 2015-05-27 08:47:52 UTC
Program received signal SIGSEGV, Segmentation fault.
0x00007fffb50511db in ScCondFormatList::RecalcAll (this=0x1a835a0)
    at /home/philippe/src/lodev/master/sc/source/ui/condformat/condformatdlg.cxx:193
193	        nTotalHeight += (*itr)->GetSizePixel().Height();
(gdb) bt
#0  0x00007fffb50511db in ScCondFormatList::RecalcAll (this=0x1a835a0)
    at /home/philippe/src/lodev/master/sc/source/ui/condformat/condformatdlg.cxx:193
#1  0x00007fffb5064a3a in ScIconSetFrmtEntry::IconSetTypeHdl (this=0x1b6d6b0)
    at /home/philippe/src/lodev/master/sc/source/ui/condformat/condformatdlgentry.cxx:1601
#2  0x00007fffb50643d2 in ScIconSetFrmtEntry::ScIconSetFrmtEntry (this=0x1b6d6b0, pParent=0x1a835a0, pDoc=0x1045fc8, rPos=..., 
    pFormat=0x0) at /home/philippe/src/lodev/master/sc/source/ui/condformat/condformatdlgentry.cxx:1552
#3  0x00007fffb505674d in VclPtr<ScIconSetFrmtEntry>::Create<ScCondFormatList* const, ScDocument*&, ScAddress&>(ScCondFormatList* const&&, ScDocument*&, ScAddress&) () at /home/philippe/src/lodev/master/include/vcl/vclptr.hxx:139
#4  0x00007fffb5051ca0 in ScCondFormatList::ColFormatTypeHdl (this=0x1a835a0, pBox=0x1a7d9e0)
    at /home/philippe/src/lodev/master/sc/source/ui/condformat/condformatdlg.cxx:279
#5  0x00007fffb505181d in ScCondFormatList::LinkStubColFormatTypeHdl (instance=0x1a835a0, data=0x1a7d9e0)
    at /home/philippe/src/lodev/master/sc/source/ui/condformat/condformatdlg.cxx:239
#6  0x00007ffff0a6fb45 in Link<void*, long>::Call (this=0x1a7dc68, data=0x1a7d9e0)
    at /home/philippe/src/lodev/master/include/tools/link.hxx:127
#7  0x00007ffff0c73eb8 in Control::ImplCallEventListenersAndHandler (this=0x1a7d9e0, nEvent=1108, rHandler=..., 
    pCaller=0x1a7d9e0) at /home/philippe/src/lodev/master/vcl/source/control/ctrl.cxx:330
#8  0x00007ffff0cd1232 in ListBox::Select (this=0x1a7d9e0) at /home/philippe/src/lodev/master/vcl/source/control/lstbox.cxx:975
#9  0x00007ffff0ccdc6c in ListBox::ImplSelectHdl (this=0x1a7d9e0)
    at /home/philippe/src/lodev/master/vcl/source/control/lstbox.cxx:235
#10 0x00007ffff0ccda37 in ListBox::LinkStubImplSelectHdl (instance=0x1a7d9e0, data=0x0)
    at /home/philippe/src/lodev/master/vcl/source/control/lstbox.cxx:213
#11 0x00007ffff0a6fb45 in Link<void*, long>::Call (this=0x1a6d8e0, data=0x0)
    at /home/philippe/src/lodev/master/include/tools/link.hxx:127
#12 0x00007ffff0cadb9a in ImplListBoxWindow::ImplCallSelect (this=0x1a6d5c0)
    at /home/philippe/src/lodev/master/vcl/source/control/ilstbox.cxx:733
#13 0x00007ffff0caf37c in ImplListBoxWindow::Tracking (this=0x1a6d5c0, rTEvt=...)
    at /home/philippe/src/lodev/master/vcl/source/control/ilstbox.cxx:1180
#14 0x00007ffff0bfc1aa in vcl::Window::EndTracking (this=0x1a6d5c0, nFlags=NONE)
    at /home/philippe/src/lodev/master/vcl/source/window/window2.cxx:436
#15 0x00007ffff0c26506 in ImplHandleMouseEvent (pWindow=0x1a7e390, nSVEvent=MOUSEBUTTONUP, bMouseLeave=false, nX=92, nY=61, 
    nMsgTime=5789134, nCode=1, nMode=(SIMPLECLICK | SELECT))
Comment 3 Philippe Jung 2015-05-27 13:41:11 UTC
Should be fixed by this https://gerrit.libreoffice.org/15928
Comment 4 Philippe Jung 2015-05-28 15:51:03 UTC
Fix for LO5.1 merged
For LO5.0 fix will be https://gerrit.libreoffice.org/15944
Comment 5 Commit Notification 2015-06-01 07:55:23 UTC
Philippe Jung committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=75ceb04d81f68bbe8e3fecc24ad4977d9b2499f6&h=libreoffice-5-0

tdf#91489 - CONDITIONAL FORMATTING: Crash on select Icon Set from dialog

It will be available in 5.0.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Philippe Jung 2015-06-01 07:56:24 UTC
Pushed in 5.0 & 5.1
Link to 5.1 not automatically updated because of gerrit comment Bug 91489 instead of tdf#91489
Comment 7 Yan Pas 2015-09-13 20:25:23 UTC
Using 5.0.1.2, still crashes
Format> Conditional Formatting> Icon Set (dialog opens)
Now scroll mouse wheel over "Icon set" or "All cells" - crash. What has been fixed?
Comment 8 pierre-yves samyn 2015-09-14 07:23:59 UTC
Hi

Verified fixed for me on windows 7/64 & Version: 5.0.2.1
Build ID: 9a18d52abbdfbdc2ac9acebec2b92e7859eb73b7
Locale : fr-FR (fr_FR)

(In reply to Yan Pashkovsky from comment #7)
> Using 5.0.1.2, still crashes
> Format> Conditional Formatting> Icon Set (dialog opens)
> Now scroll mouse wheel over "Icon set" or "All cells" - crash. What has been
> fixed?

I do not reproduce. Have you tried with a "fresh install" (new profile)?

I set status to NEEDINFO. Please can you try to be more explicit (steps to reproduce/ OS). 

Regards
Pierre-Yves
Comment 9 Yan Pas 2015-09-14 18:54:35 UTC
On Windows it is fixed, but on Linux (L Mint 17.2) I still face crashes
Comment 10 Yan Pas 2015-09-14 22:33:54 UTC
Clarifying video description:
https://youtu.be/Xrnj_-oINsQ
Comment 11 krajcsi 2015-09-29 10:42:41 UTC
Hi,

I guess the bug described in comment #7 is another bug:

1. Open Conditional Formatting dialog
2. Use your mouse wheel to change between Color Scale, Data Bar and Icon Set. The change should be fast, I could regular crashes only with the mouse wheel.

Version: 5.0.2.2
Build ID: 37b43f919e4de5eeaca9b9755ed688758a8251fe
Locale: en-US (en_US.UTF-8)
Linux Mint 17.2

If it is not related to the original bug, should we open a new issue?
Comment 12 Yan Pas 2015-09-29 10:46:58 UTC
I would like to say that mouse scrolling causes crash only on Linux, on Windows everything is OK with it.
Comment 13 Julien Nabet 2016-01-22 23:42:38 UTC
(In reply to Yan Pashkovsky from comment #12)
> I would like to say that mouse scrolling causes crash only on Linux, on
> Windows everything is OK with it.

I reproduced your bug and bt shows it's another pb.
So I created a brand new bugtracker, see tdf#97331