tdf#91489 - CONDITIONAL FORMATTING: Crash on select Icon Set from dialog

Removed the recalcAll line in IMPL_LINK_NOARG( ScIconSetFrmtEntry, IconSetTypeHdl )

1) ScCondFormatList already calls RecalcAll on selection new/changed
2) Without this line, it does not crash

Change-Id: I8aa45f691d33d8ad046a88e7695913e2ccff3caf
Reviewed-on: https://gerrit.libreoffice.org/15928
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>
Tested-by: Katarina Behrens <Katarina.Behrens@cib.de>
(cherry picked from commit 0b52089c1d88a5223981d8c177b3044d53eff700)