sc/source/ui/condformat/condformatdlgentry.cxx
@@ -1601,7 +1601,6 @@ IMPL_LINK_NOARG( ScIconSetFrmtEntry, IconSetTypeHdl )
     maEntries[0]->SetFirstEntry();
 
     SetHeight();
-    static_cast<ScCondFormatList*>(GetParent())->RecalcAll();
 
     return 0;
 }
